[package]
name = "hcse_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprs = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.8"
histogram = "0.10.1"

